--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(ConcurrentJobScheduler)
 
 set(CMAKE_CXX_STANDARD 17)
+find_package(GTest REQUIRED)
 
 add_executable(scheduler 
     src/main.cpp 
@@ -9,3 +10,15 @@ add_executable(scheduler
 )
 
 target_link_libraries(scheduler pthread)
+
+add_executable(scheduler_tests
+    tests/test_runner.cpp
+    tests/test_scheduler.cpp
+    src/scheduler.cpp
+)
+
+target_link_libraries(scheduler_tests 
+    GTest::gtest 
+    GTest::gtest_main
+    pthread
+)
